--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,7 @@
     "strict": true,
     "trailing": true,
     "smarttabs": true,
+    "newcap": false,
     "globals": {
         "angular": false
     }
